# tender-compliance-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/: sample_tender.md
src/tender_compliance_agent/: __init__.py  cli.py  extraction.py  models.py  parsers.py  reports.py
tests/: test_extraction.py  test_reports.py
