[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tender-compliance-agent"
version = "0.1.0"
description = "Python agent for tender document compliance pre-review and bid health check reports."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Tender Compliance Agent Team" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[project.scripts]
tender-compliance-agent = "tender_compliance_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
